syntax = "proto3";

package metastore.v1;

import "types/v1/types.proto";

service IndexService {
  rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
  rpc GetBlockMetadata(GetBlockMetadataRequest) returns (GetBlockMetadataResponse) {}
}

message AddBlockRequest {
  BlockMeta block = 1;
}

message AddBlockResponse {}

message GetBlockMetadataRequest {
  BlockList blocks = 1;
}

message GetBlockMetadataResponse {
  repeated BlockMeta blocks = 1;
}

message BlockList {
  string tenant = 1;
  uint32 shard = 2;
  repeated string blocks = 3;
}

message BlockMeta {
  uint64 format_version = 1;
  string id = 2;
  int64 min_time = 3;
  int64 max_time = 4;
  uint32 shard = 5;
  uint32 compaction_level = 6;
  // Optional. Empty if compaction level is 0.
  string tenant_id = 7;
  repeated Dataset datasets = 8;
  uint64 size = 9;
  string created_by = 10;
}

message Dataset {
  string tenant_id = 1;
  string name = 2;
  int64 min_time = 3;
  int64 max_time = 4;

  // Table of contents lists data sections within the tenant
  // service region. The offsets are absolute.
  //
  // The interpretation of the table of contents is specific
  // to the metadata format version. By default, the sections are:
  //  - 0: profiles.parquet
  //  - 1: index.tsdb
  //  - 2: symbols.symdb
  repeated uint64 table_of_contents = 5;
  // Size of the section in bytes.
  uint64 size = 6;

  // TODO: Delete. Use labels instead.
  // Profile types present in the tenant service data.
  repeated string profile_types = 7;
  repeated types.v1.Labels labels = 8;
}
